--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,600&display=swap');
+
+*{
+ 
+    padding : 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+body {
+
+    font-family: 'Poppins', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+a {
+
+    text-decoration:none;
+
+}
+
+.flex {
+    display:flex;
+}
+
+.flex_space{
+    display: flex;
+    justify-content: space-between;
+    width:100%;
+}
+
+.flex_spac{
+    display: flex;
+    margin-left: 100px;
+    width:100%;
+}
+
+.container{
+    max-width: 100%;
+    margin: auto;
+}
+
+li{
+    list-style-type:none;
+}
+
+button{
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.primary-btn {
+    padding: 10px 20px;
+    background-color: #31b675;
+    color: #fff;
+    font-weight: 400;
+    transition: 05s;
+}
+
+.primary-btn:hover {
+    background-color: #fff;
+    color: #fff;
+}
+
+
+
+textarea,
+select, 
+input {
+    width:100%;
+    padding:20px;
+    outline:none;
+    border:none;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .main-content {
+    width: 70%;
   }
-  to {
-    transform: rotate(360deg);
+  /*-----------side-content-----------*/
+  
+  .side-content {
+    width: 30%;
+    margin-left: 40px;
   }
-}
+  
+  @media screen and (max-width: 768px) {
+    
+    .grid {
+      grid-template-columns: repeat(2, 1fr);
+    }
+   
+  }
+
+
